Add Prisma integration and guestbook table
Introduced Prisma for database management with PostgreSQL as the datasource. Created a `Guestbook` model and initialized its migration. Updated the guestbook component to fetch and display data from the database.

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ OLA_FACEBOOK='' #Facebook url
 JAREK_PHONE=''
 JAREK_INSTAGRAM='' #Instagram url
 JAREK_FACEBOOK='' #Facebook url
+
+#Prisma database url
+DATABASE_URL=''
