--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.485.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
